tests/fixtures/invalid/pow_int_none_bool.py
# Cannot call pow() with Int, None, Bool
x = pow(1, None, True)
